--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.21.0.1'
+    compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
+
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
