--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,11 @@ dependencies {
     compile group: 'com.google.guava', name: 'guava', version: '24.1-jre'
     compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'
+    compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
+    compile group: 'com.sun.xml.bind', name: 'jaxb-impl', version: '2.3.0'
+    compile group: 'com.sun.xml.bind', name: 'jaxb-core', version: '2.3.0'
+    compile group: 'javax.activation', name: 'activation', version: '1.1.1'
+
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
